--- a/templates/SpaceEye.html
+++ b/templates/SpaceEye.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceEye</title>
     <link rel="stylesheet" type="text/css" href="static/css/SpaceEye.css">
+    <link rel="stylesheet" type="text/css" href="static/css/search.css">
+    <link rel="stylesheet" type="text/css" href="static/css/header.css">
+    <script src="../static/js/search.js"></script>     
 </head>
 <body>
-    {% include 'components/header.html' %}
+    {% include 'components/menu/header.html' %}
     <div id="map"></div>
     <div id="modal-save-polygon" class="modal" style="display: none;">
         <div id="card-save-polygon" class="card">
